--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
     "rxjs": "^5.1.0",
+    "simple-lipsum": "^0.1.5",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
